# reference_generator

./: .gitignore  .gitmodules  CMakeLists.txt  Plot.py  README.md  log_Mar11_2022_1158.csv  log_Mar11_2022_1215.csv  log_Mar11_2022_1226.csv  mocap_fail.csv  mocap_fail_2.csv  mocap_fail_static.csv
apps/: CMakeLists.txt
apps/BT_Aurel/: CMakeLists.txt  timestamps.txt
apps/BT_Aurel/src/: main.cpp
apps/_TEMPLATE/: CMakeLists.txt
apps/a_star/: CMakeLists.txt
apps/a_star/include/: astar.h  graph.cpp  graph.h
apps/a_star/src/: a_star_test.cpp  astar.cpp  graph.cpp  main.cpp
apps/failsafe_test/: CMakeLists.txt
apps/failsafe_test/src/: main.cpp
apps/grab_object/: CMakeLists.txt
apps/grab_object/src/: main.cpp
apps/grasp_video/: CMakeLists.txt
apps/grasp_video/src/: main.cpp
apps/gripper_sensor_test/: CMakeLists.txt
apps/gripper_sensor_test/src/: main.cpp
apps/gripper_takeoff/: CMakeLists.txt
apps/gripper_takeoff/src/: main.cpp
apps/gripper_test/: CMakeLists.txt
apps/gripper_test/src/: main.cpp
apps/land_in_stand/: CMakeLists.txt
apps/land_in_stand/src/: main.cpp
apps/linear_gripper/: CMakeLists.txt
apps/linear_gripper/src/: main.cpp
apps/mocap_fail_test/: CMakeLists.txt
apps/mocap_fail_test/src/: main.cpp
apps/mocap_test/: CMakeLists.txt
apps/parabola/: CMakeLists.txt  main.cpp
apps/pick_and_place/: CMakeLists.txt
apps/px4_cmd_test/: CMakeLists.txt
apps/review_demo/: CMakeLists.txt
apps/rollout_demo/: CMakeLists.txt
apps/rotlin_demo/: CMakeLists.txt
apps/swoop_test/: main.cpp
apps/tuning_pos/: CMakeLists.txt
(+72 files in other folders)
