add_subdirectory(land_in_stand)
add_subdirectory(gripper_test)
add_subdirectory(gripper_sensor_test)
# add_subdirectory(grab_object)
# add_subdirectory(tuning_pos)
add_subdirectory(failsafe_test)
add_subdirectory(linear_gripper)
# add_subdirectory(a_star)
# add_subdirectory(mocap_fail_test)
# add_subdirectory(pick_and_place)
add_subdirectory(grasp_video)
add_subdirectory(review_demo)
add_subdirectory(mocap_test)